--- a/DataProcessors/ВыгрузкаЗагрузкаПоПравилам/Forms/ФормаОбычная.xml
+++ b/DataProcessors/ВыгрузкаЗагрузкаПоПравилам/Forms/ФормаОбычная.xml
@@ -1,29 +1,22 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.1">
-	<Subsystem uuid="7f526bbb-d710-4dc5-adcf-505d7c51004d">
+	<Form uuid="5cede6a7-f769-45ff-b0be-029d9647ca75">
 		<Properties>
-			<Name>xddTestTools</Name>
+			<Name>ФормаОбычная</Name>
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>Инструменты тестирования</v8:content>
+					<v8:content>Форма обычная</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
-			<IncludeHelpInContents>true</IncludeHelpInContents>
-			<IncludeInCommandInterface>true</IncludeInCommandInterface>
-			<Explanation/>
-			<Picture/>
-			<Content>
-				<xr:Item xsi:type="xr:MDObjectRef">DataProcessor.xddEntryPoint</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">DataProcessor.xddTestRunner</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">DataProcessor.xddDecorator</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">DataProcessor.xddQweryConsole</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">DataProcessor.xddDataLoader_new</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">DataProcessor.xddMonitor</xr:Item>
-				<xr:Item xsi:type="xr:MDObjectRef">e600c8d4-3237-461a-b4f9-47310e192c3a</xr:Item>
-			</Content>
+			<FormType>Ordinary</FormType>
+			<IncludeHelpInContents>false</IncludeHelpInContents>
+			<UsePurposes>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">PersonalComputer</v8:Value>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">MobileDevice</v8:Value>
+			</UsePurposes>
+			<ExtendedPresentation/>
 		</Properties>
-		<ChildObjects/>
-	</Subsystem>
+	</Form>
 </MetaDataObject>
